# lumitech-python-template

./: .dockerignore  .env.example  .gitlint  .mypy.ini  .pre-commit-config.yaml  .prettierrc.toml  .ruff.toml  .typos.toml  README.md  dev.Dockerfile  dev.docker-compose.yml  dev.requirements.txt  local.Dockerfile  local.docker-compose.yml  prod.Dockerfile  prod.docker-compose.yml  prod.requirements.txt  pyproject.toml
.github/.github/: pull_request_template.md
.github/workflows/: lint.yml
app/: alembic.ini  entrypoint.sh  main.py  settings.py
app/database/: base.py  engine.py  models.py
app/database/migrations/: env.py
app/database/migrations/versions/: 2024_12_06_1036-2351bdf7cc26_add_user.py  2025_04_06_1614-6786a8aedf8f_add_user_table.py  2025_07_14_1243-e00141056a92_add_user_table.py
app/exceptions/: database.py  handlers.py  http.py
app/manager/: base.py  user.py
app/repository/: base.py  user.py
app/routes/: dependencies.py  misc.py  user.py
app/schemas/: base.py  user.py
app/utils/: cache.py  constants.py  misc.py  mixins.py  pagination.py  secrets.py  tokens.py  types.py
