[project]
name = "lumitech-python-template"
version = "0.1.0"
description = "Python Template"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.15.2",
    "asyncpg>=0.30.0",
    "bcrypt>=4.3.0",
    "fastapi-mail>=1.4.2",
    "fastapi-pagination>=0.12.34",
    "fastapi[standard]>=0.115.12",
    "itsdangerous>=2.2.0",
    "orjson>=3.10.16",
    "pydantic-settings>=2.8.1",
    "pyjwt>=2.10.1",
    "redis>=5.2.1",
    "sqlakeyset>=2.0.1739066250",
    "sqlalchemy>=2.0.40",
]

[dependency-groups]
dev = [
    "mypy>=1.15.0",
    "mypy-extensions>=1.0.0",
    "ruff>=0.11.4",
]
