[project]
name = "lumitech-python-template"
version = "0.1.0"
description = "Python Template"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.16.4",
    "asyncpg>=0.30.0",
    "bcrypt>=4.3.0",
    "fastapi-pagination>=0.13.3",
    "fastapi[standard]>=0.116.1",
    "itsdangerous>=2.2.0",
    "orjson>=3.10.18",
    "pydantic-settings>=2.10.1",
    "pyjwt>=2.10.1",
    "redis>=6.2.0",
    "sqlakeyset>=2.0.1746777265",
    "sqlalchemy>=2.0.41",
]

[dependency-groups]
dev = [
    "mypy>=1.16.1",
    "mypy-extensions>=1.1.0",
    "ruff>=0.12.3",
]

[tool.uv]
environments = [
    "sys_platform == 'linux'",
]
